--- a/shared/references.bib
+++ b/shared/references.bib
@@ -4,3 +4,9 @@
   year={2020},
   publisher={Chapman and Hall/CRC}
 }
+@book{jaynes2003,
+  title={Probability theory: The logic of science},
+  author={Jaynes, Edwin T},
+  year={2003},
+  publisher={Cambridge university press}
+}
