--- a/CausalInference/06_causal_tutorial.Rmd
+++ b/CausalInference/06_causal_tutorial.Rmd
@@ -43,7 +43,7 @@ coefficients $\beta_j$ express the isolated effects of each predictor
 on the response. You can check this by creating a Gaussian variable with
 a mean value that is the sum of two independent predictors:
 
-```{r }
+```{r, eval=FALSE }
 set.seed(42)
 x1 <- runif(1000)
 x2 <- runif(1000)
@@ -53,7 +53,7 @@ y <- rnorm(1000, mean = x1 + x2, sd = 0.5)
 and then comparing the coefficients of the multiple regression with
 those of the simple regression on each single predictor:
 
-```{r }
+```{r , eval=FALSE }
 coef( lm(y ~ x1 + x2) )
 coef( lm(y ~ x1) )
 coef( lm(y ~ x2) )
@@ -65,7 +65,7 @@ $u$. The common cause creates a correlation between the two
 predictors:
 
 
-```{r }
+```{r , eval=FALSE }
 u <- runif(100)
 x1 <- rnorm(100, mean = u, sd =0.1)
 x2 <- rnorm(100, mean = u, sd =0.1)
@@ -77,7 +77,7 @@ And now the coefficients of each predictor in the multiple model are
 much smaller than their isolated effects (estimated from simple
 regressions):
 
-```{r }
+```{r , eval=FALSE }
 coef( lm(y ~ x1 + x2) )
 coef( lm(y ~ x1) )
 coef( lm(y ~ x2) )
@@ -96,7 +96,7 @@ to each other and plot $y$ as a
 function of each of these residual variables:
 
 
-```{r }
+```{r, eval=FALSE }
 x1_res <- residuals( lm(x1 ~ x2) )
 x2_res <- residuals( lm(x2 ~ x1) )
 
@@ -119,7 +119,7 @@ the raw values of the predictors (first row of plots above). You can
 check this by comparing the coefficients of these regressions to the
 multiple regression coefficients:
 
-```{r }
+```{r , eval=FALSE }
 coef( lm(y ~ x1 + x2) )
 coef( lm(y ~x1_res) )
 coef( lm(y ~x1_res) )
@@ -146,7 +146,7 @@ There is always a shared common cause between X and Y, and estimating the effect
 
 Let's check this by simulating the DAG in model 2:
 
-```{r}
+```{r, eval=FALSE }
 N = 100
 U = rnorm(N)
 b_zu = 0.5
@@ -185,7 +185,7 @@ Adding Z as a covariate increases the precision of the estimate of the effect of
 
 Again, let's check using simulations:
 
-```{r}
+```{r, eval=FALSE }
 set.seed(2)
 library(rethinking)
 N = 200
@@ -227,7 +227,7 @@ __Exercise__: Simulate the bias amplification example and check the effect of in
 
 To explore the effect of a bad control variable, let's simulate a collider:
 
-```{r}
+```{r, eval=FALSE }
 # DAG : X -> Z <- Y
 N = 200
 X = rnorm(N)
@@ -240,7 +240,7 @@ m2 = lm(Y~X+Z) # Model including the collider
 
 First, let's look at the significance of the variables in both models:
 
-```{r}
+```{r, eval=FALSE }
 summary(m1)
 summary(m2)
 ```
@@ -251,7 +251,7 @@ Many researchers would interpret the significant results in model 2 as evidence 
 
 How about AIC? Would model comparison identify the correct model?
 
-```{r}
+```{r, eval=FALSE }
 library(bbmle)
 AICctab(m1, m2, mnames = c("Correct", "Biased"),
         base=TRUE, weights = TRUE, nobs = N)
@@ -271,7 +271,7 @@ knitr::include_graphics("../figures/dags_6M3.png")
 
 You can check your answers using the dagitty package or the [online interface](http://www.dagitty.net/dags.html)^[For begginers, we reccomend to start playing with this interface, and then check the results with the `dagitty` package]. Here is an example:
 
-```{r}
+```{r, eval=FALSE }
 library(dagitty)
 dag1 = dagitty('dag { X -> Y Z -> X Z -> Y A -> Z A -> Y}')
 
