--- a/shared/references.bib
+++ b/shared/references.bib
@@ -89,3 +89,21 @@
   doi       = "10.1111/rssb.12348"
 }
 
+@ARTICLE{Silk2005-fw,
+  title    = "Chimpanzees are indifferent to the welfare of unrelated group
+              members",
+  author   = "Silk, Joan B and Brosnan, Sarah F and Vonk, Jennifer and Henrich,
+              Joseph and Povinelli, Daniel J and Richardson, Amanda S and
+              Lambeth, Susan P and Mascaro, Jenny and Schapiro, Steven J",
+  journal  = "Nature",
+  volume   =  437,
+  number   =  7063,
+  pages    = "1357--1359",
+  month    =  oct,
+  year     =  2005,
+  language = "en",
+  issn     = "0028-0836, 1476-4687",
+  pmid     = "16251965",
+  doi      = "10.1038/nature04243"
+}
+
