dynamic models class

--- a/shared/references.bib
+++ b/shared/references.bib
@@ -107,3 +107,18 @@
   doi      = "10.1038/nature04243"
 }
 
+@ARTICLE{Wilson2010-fu,
+  title     = "An ecologist's guide to the animal model",
+  author    = "Wilson, Alastair J and R{\'e}ale, Denis and Clements, Michelle N
+               and Morrissey, Michael M and Postma, Erik and Walling, Craig A
+               and Kruuk, Loeske E B and Nussey, Daniel H",
+  journal   = "J. Anim. Ecol.",
+  publisher = "Blackwell Publishing Ltd",
+  volume    =  79,
+  number    =  1,
+  pages     = "13--26",
+  month     =  jan,
+  year      =  2010,
+  issn      = "0021-8790, 1365-2656",
+  doi       = "10.1111/j.1365-2656.2009.01639.x"
+}
